# BossBrawl

./: .gitignore  .map  BossKiller.cpp  CMakeLists.txt  CharacterLoader.cpp  CharacterLoader.h  CharacterLoader.hpp  Doxyfile  GameState.cpp  GameState.h  GameState.hpp  HACKING.txt  LICENSE  MainMenu.cpp  MainMenu.h  MenuState.cpp  MenuState.h  MenuState.hpp  README.md  ScreenGameLoop.cpp  ScreenGameLoop.h  State.hpp  StateManager.cpp  StateManager.h  StateManager.hpp  TODO.txt  TileMap.cpp  TileMap.hpp  config.cpp  gamestate.cpp  gamestate.h  main.cpp  menustate.cpp  menustate.h  runastyle.sh  state.h  statemanager.cpp  statemanager.h  statesList.h  updatesourcelist.py  (+1 more)
CMake/Modules/: FindSFML.cmake~
doc/: .gitignore
res/maps/: test.entity  test.map  test1.map
res/style/: editor-stylesheet.qss
scripts/: runastyle.sh  updatesourcelists.py
spec/: map.md
src/: Button.cpp  Button.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CharacterLoader.cpp  CharacterLoader.hpp  Editor.cpp  Editor.hpp  EditorState.cpp  EditorState.hpp  GameState.cpp  GameState.hpp  IconButton.cpp  IconButton.hpp  Layer.cpp  Layer.hpp  MenuState.cpp  MenuState.hpp  State.hpp  StateManager.cpp  StateManager.hpp  TextButton.cpp  TextButton.hpp  TileMap.cpp  TileMap.hpp  Widget.cpp  Widget.hpp  config.cpp  config.hpp  graphics.cpp  graphics.hpp  main.cpp  stateDriver.cpp  stateDriver.hpp
src/Common/: CMakeLists.txt
src/Common/Entities/: DefaultEnemy.cpp  DefaultEnemy.hpp  Enemy.cpp  Enemy.hpp  EnemyPepijn.cpp  EnemyPepijn.hpp  Entity.cpp  Entity.hpp  EntityContainer.cpp  EntityContainer.hpp  Player.cpp  Player.hpp
src/Common/Map/: Layer.cpp  Layer.hpp  TileMap.cpp  TileMap.hpp
src/Common/Util/: collision.cpp  collision.h  collision.hpp  math.hpp  unused.hpp  view.cpp  view.hpp
src/Core/: Camera.cpp  Camera.hpp  State.hpp  config.cpp  config.hpp  graphics.cpp  graphics.hpp  main.cpp  stateDriver.cpp  stateDriver.hpp
src/Editor/: BottomBarWidget.cpp  BottomBarWidget.hpp  CMakeLists.txt  Editor.cpp  Editor.hpp  EditorState.cpp  EditorState.hpp  EditorWidget.cpp  EditorWidget.hpp  LayerItemWidget.cpp  LayerItemWidget.hpp  LayerListWidget.cpp  LayerListWidget.hpp  LayerSettingsDialog.cpp  LayerSettingsDialog.hpp  LayerSettingsDialog.ui  LayerTabWidget.cpp  LayerTabWidget.hpp  LayerWidget.cpp  LayerWidget.hpp  MainWidget.cpp  MainWidget.hpp  MapWidget.cpp  MapWidget.hpp  SFMLWidget.cpp  SFMLWidget.hpp  TileSelectionWidget.cpp  TileSelectionWidget.hpp  TileWidget.cpp  TileWidget.hpp  ToolbarWidget.cpp  ToolbarWidget.hpp  editor.cpp  editor.h  editorMain.cpp  editorWindow.cpp  editorWindow.h  layersettings.cpp  layersettings.h  layersettings.ui  (+12 more)
src/Entities/: DefaultEnemy.cpp  DefaultEnemy.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  EntityContainer.cpp  EntityContainer.hpp  Player.cpp  Player.hpp
src/Game/: CMakeLists.txt  DefaultEnemy.cpp  DefaultEnemy.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  EntityContainer.cpp  EntityContainer.hpp  GameState.cpp  GameState.hpp  Player.cpp  Player.hpp
src/Game/Core/: State.hpp  config.cpp  graphics.cpp  graphics.hpp  main.cpp  stateDriver.cpp  stateDriver.hpp
src/Game/Gui/: IconButton.cpp  IconButton.hpp  TextButton.cpp  TextButton.hpp  UI.cpp  UI.hpp  VerticalScrollBar.cpp  VerticalScrollBar.hpp  Widget.cpp  Widget.hpp
src/Game/Menu/: MenuState.cpp  MenuState.hpp  OptionsMenuState.cpp  OptionsMenuState.hpp
src/Game/States/: GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp  OptionsMenuState.cpp  OptionsMenuState.hpp
src/Gui/: IconButton.cpp  IconButton.hpp  ScrollArea.cpp  ScrollArea.hpp  ScrollBar.cpp  ScrollBar.hpp  TextButton.cpp  TextButton.hpp  VerticalScrollBar.cpp  VerticalScrollBar.hpp  Widget.cpp  Widget.hpp  layerSettings.cpp  layerSettings.hpp
src/Map/: EntityContainer.cpp  EntityContainer.hpp  Layer.cpp  Layer.hpp  TileMap.cpp  TileMap.hpp
src/Menu/: MenuState.cpp  MenuState.hpp  OptionsMenuState.cpp  OptionsMenuState.hpp
src/Options/: OptionsState.cpp  OptionsState.hpp
src/Util/: Camera.cpp  Camera.hpp  collision.cpp  math.hpp  view.cpp  view.hpp
